--- a/Docplanner.css
+++ b/Docplanner.css
@@ -423,6 +423,69 @@ transform: skew(-20deg);
     font-size: 9px;
 }
 
+#sounds 
+{
+    width: 100%;
+    height: auto;
+    padding: 20px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    background-color: #ffffff;
+    gap: 10px;
+}
+#sounds h1 
+{
+    text-align: center;
+    font-size: 20px;
+}
+
+#sounds a 
+{
+    text-align: center;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #3D83DF;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+/* footer */
+
+#my-footer 
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 30px 0px;
+    border-top: 1px solid rgba(112, 112, 112, 0.725);
+}
+
+.my-footer-container 
+{
+    text-align: center;
+    width: 100%;
+    
+    
+}
+
+.my-footer-container h1
+{
+    width: 100%;
+    color: black;
+    font-size: 12px;
+
+    
+}
+
+
+
+
+
 
 
 
@@ -760,7 +823,7 @@ transform: skew(-20deg);
 {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(5,1fr);
+    grid-template-rows: repeat(4,1fr);
     justify-content: center;
     align-items: center;
     flex-flow: column;
@@ -824,6 +887,67 @@ transform: skew(-20deg);
     padding: 8px;
     font-size: 13px;
     border-radius: 5px;
+}
+
+/* Sound like */
+
+#sounds 
+{
+    width: 100%;
+    height: auto;
+    padding: 20px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    background-color: #ffffff;
+    gap: 10px;
+}
+#sounds h1 
+{
+    text-align: center;
+    font-size: 20px;
+}
+
+#sounds a 
+{
+    text-align: center;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #3D83DF;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+/* footer */
+
+#my-footer 
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 30px 0px;
+    border-top: 1px solid rgba(112, 112, 112, 0.725);
+}
+
+.my-footer-container 
+{
+    text-align: center;
+    width: 100%;
+    
+    
+}
+
+.my-footer-container h1
+{
+    width: 100%;
+    color: black;
+    font-size: 12px;
+
+    
 }
 
 
@@ -967,8 +1091,10 @@ transform: skew(-20deg);
     display: flex;
     justify-content:center ;
     align-items: center;
-    flex-flow: column;
+    flex-flow: row ;
     gap: 20px;
+    padding: 10px;
+    
 }
 
 .offers-container .offers-card 
@@ -1167,7 +1293,7 @@ transform: skew(-20deg);
 {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
     justify-content: center;
     align-items: center;
     flex-flow: column;
@@ -1232,6 +1358,69 @@ transform: skew(-20deg);
     padding: 8px;
     font-size: 13px;
     border-radius: 5px;
+}
+
+/* Sound like */
+
+#sounds 
+{
+    width: 100%;
+    height: 30vh;
+    padding: 20px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    background-color: #ffffff;
+    gap: 10px;
+}
+#sounds h1 
+{
+    text-align: center;
+    font-size: 20px;
+}
+
+#sounds a 
+{
+    text-align: center;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #3D83DF;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+
+
+/* footer */
+
+#my-footer 
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 30px 0px;
+    border-top: 1px solid rgba(112, 112, 112, 0.725);
+}
+
+.my-footer-container 
+{
+    text-align: center;
+    width: 100%;
+    
+    
+}
+
+.my-footer-container h1
+{
+    width: 100%;
+    color: black;
+    font-size: 12px;
+
+    
 }
 
 
@@ -1600,7 +1789,7 @@ transform: skew(-20deg);
 {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
     justify-content: center;
     align-items: center;
     flex-flow: column;
@@ -1665,6 +1854,101 @@ transform: skew(-20deg);
     padding: 8px;
     font-size: 13px;
     border-radius: 5px;
+}
+/* Sound like */
+
+#sounds 
+{
+    width: 100%;
+    height: 33vh;
+    padding: 20px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    background-color: #ffffff;
+    gap: 10px;
+}
+#sounds h1 
+{
+    text-align: center;
+    font-size: 20px;
+}
+
+#sounds a 
+{
+    text-align: center;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #3D83DF;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+/* footer */
+
+#my-footer 
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 30px 0px;
+    border-top: 1px solid rgba(112, 112, 112, 0.725);
+}
+
+.my-footer-container 
+{
+    text-align: center;
+    width: 100%;
+    
+    
+}
+
+.my-footer-container h1
+{
+    width: 100%;
+    color: black;
+    font-size: 12px;
+
+    
+}
+
+
+/* Footer */
+
+#my-footer 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    width: 100%;
+    padding: 30px 0px;
+    border-top: 1px solid rgba(140, 140, 140, 0.492);
+}
+
+
+
+#my-footer .my-footer-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 5px 0px;
+    width: 100%;
+    
+}
+
+#my-footer .my-footer-container h1 
+{
+    color: black;
+    text-align: center;
+    font-size: 16px;
+    
 }
 
 
